Add digit counter
Adds text at the bottom of the page to show what digit they are at

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                 <br>
                 <input type="text" name="start digit input" id="startDigitInput" class="settings-page-input" placeholder="Enter Digit Index">
             </span>
+            <!--
             <span>
                 <label for="lastDigitInput" class="settings-page-label last-digit-label">End at digit: </label>
                 <br>
                 <input type="text" name="last digit input" id="lastDigitInput" class="settings-page-input" placeholder="Enter Digit Index">
             </span>
+            -->
             <button class="start-game-btn" id="startGameBtn">Start Game</button>
         </div>
     </section>
@@ -90,6 +92,7 @@
             </div>
             <br> 
         </div>
+        <h1 class="current-digit" id="currentDigit">Digit: 0</h1>
     </section>
     <section class="credits-page" id="creditsPage">
         <img src="./images/close.png" alt="close button" id="closeCreditsPage" class="close-btn">
